<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/smallPadding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallPadding"
        android:background="@color/colorPrimary"
        android:padding="@dimen/smallPadding"
        android:text="@string/updateinfo"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/mediumText"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:layout_marginBottom="@dimen/smallMargin"
        android:background="@drawable/bg_edittext"
        android:hint="@string/name_require"
        android:paddingStart="@dimen/smallPadding" />
    <EditText
        android:id="@+id/etNewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:layout_marginBottom="@dimen/smallMargin"
        android:background="@drawable/bg_edittext"
        android:hint="@string/address_require"
        android:paddingStart="@dimen/smallPadding" />

    <EditText
        android:id="@+id/etNewPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:layout_marginBottom="@dimen/smallMargin"
        android:background="@drawable/bg_edittext"
        android:hint="@string/phone_require"
        android:inputType="number"
        android:paddingStart="@dimen/smallPadding" />

</LinearLayout>