<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llctnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbOrderDetails"
        android:orientation="vertical"
        android:padding="@dimen/smallPadding">

        <TextView
            android:id="@+id/tvOrderDetailOId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:text="@string/order_id" />


        <TextView
            android:id="@+id/tvOrderDetailODate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:text="@string/order_date" />


        <TextView
            android:id="@+id/tvOrderDetailOStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:text="@string/order_status" />
    </LinearLayout>
</androidx.cardview.widget.CardView>