<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.order.payment.PaymentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbPayment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thanh toán"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/mediumText"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llctnAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbPayment"
        android:orientation="horizontal"
        android:padding="@dimen/smallPadding">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvPUserAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/tvPUserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone" />
        </LinearLayout>

        <Button
            android:id="@+id/btnChangePhoneAndAddress"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/change" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLine1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/llctnAddress"
        android:background="@color/colorPrimary"
        android:orientation="vertical" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBuyingProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llLine2"
        android:layout_below="@+id/llLine1"
        android:background="@color/colorGreyLight" />

    <LinearLayout
        android:id="@+id/llLine2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/tvTotalPay"
        android:background="@color/colorPrimary"
        android:orientation="vertical" />

    <TextView
        android:layout_marginBottom="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:id="@+id/tvTotalPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPay"
        android:layout_alignParentEnd="true"
        android:text="@string/total"
        android:textSize="@dimen/smallText"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPay"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/smallPadding"
        android:layout_marginTop="@dimen/smallPadding"
        android:layout_marginEnd="@dimen/smallPadding"
        android:layout_marginBottom="@dimen/smallPadding"
        android:background="@color/colorRed"
        android:text="@string/pay"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/mediumText"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pbPayLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackAccentTransparency"
        android:elevation="5dp"
        android:padding="@dimen/megaPadding"
        android:visibility="gone" />
</RelativeLayout>